[tool.poetry]
name = "optuslib"
version = "0.1.3"
description = "Python library for OPTUS projects"
authors = ["Aleksandr Kaekhtin <kaehtin.aa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "1.10.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
